--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -16,6 +16,10 @@ h1 {
   color: transparent;
 }
 
+
+
+
+
 .container div{
   line-height: 0
 }
@@ -54,14 +58,10 @@ h1 {
   box-shadow: -5px 15px 50px rgba(84,79,111, .4);
   transition: .3s;
   border-color: #746c6c;
-  
-  
+  margin: 1%;
   
 }
 
-.one {
-  margin-right: 10%;
-}
 
 
 
@@ -86,5 +86,25 @@ h1 {
   color: brown;
 }
 
+.blue {
+  position: relative;
+  
+}
 
+.blue:hover {
+  bottom: 1px;
+  box-shadow: -5px 15px 50px rgba(84,79,111, .2);
+  color: blue;
+}
+
+.red {
+  position: relative;
+ 
+}
+
+.red:hover {
+  bottom: 1px;
+  box-shadow: -5px 15px 50px rgba(84,79,111, .2);
+  color: #d46a6a;
+}
 
